[project]
name = "cooperativa-data-platform"
version = "0.1.0"
description = "Pipeline y visualización de datos para cooperativa financiera"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.45",
    "streamlit>=1.52.1",
]
